Derniere version, ça reste un squelette. Bug avec les monstres qui jumpent. Faut réflèchir sur comment déployer les bombes sur la carte, comment gérer le timer des bombes, comment gérer les collisions avec l'explosion.....

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body{
 .cell{
 	height: 20px;
 	width: 20px;
+	position: relative;
 }
 .monster{
 	background-color: red;
